update to add js functionality

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
         <li> BancLite: Banking Management System Application</li>
         <li> FilipiKnows: A Game Quiz in Philippine Knowledge</li>
     </section>
+    <script src="script.js"></script>
 </body>
+
 </html>
