added classes in sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="theme-toggle">Switch Theme</button>
         </header> 
         <main class="grid">
-            <section id="achievements" tabindex="0">
+            <section id="achievements" class="card" tabindex="0">
             <h2>Achievements </h2>
             <ul class="card-list">
                 <li class="card-item">Java Information Technology Specialist - <span class="muted">2025</span></li>
@@ -25,7 +25,7 @@
                 <li class="card-item">3rd Place - Battle of the Bands - <span class="muted"> Pasikatay 2024</span></li>
             </ul>
             </section>
-                <section id="projects" tabindex="0">
+                <section id="projects" class="card" tabindex="0">
                 <h2>Previous Projects</h2>
                 <ul class="card-list">
                     <li class="card-item"> Project PlastiCycle: A Year-Round Plastic Deposit, Competition, and Analytics in MMCM </li>
@@ -40,5 +40,6 @@
 </body>
 
 </html>
+
 
 
