updated index with more info in projects with link to landing page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,22 @@
                 <li class="card-item">3rd Place - Battle of the Bands - <span class="muted"> Pasikatay 2024</span></li>
             </ul>
             </section>
-                <section id="projects" class="card" tabindex="0">
+            <section id="projects" class="card" tabindex="0">
                 <h2>Previous Projects</h2>
                 <ul class="card-list">
                     <li class="card-item"> Project PlastiCycle: A Year-Round Plastic Deposit, Competition, and Analytics in MMCM </li>
+                    <p><i>Project PlastiCycle aims to collect plastic from MMCM Students as a form of competition throughout the whole year. Created in a web app using HTML, CSS, and JS.</i></p>
                     <li class="card-item"> TechnoHub: PC Peripheral POS System</li>
+                    <p><i>TechnoHub aims to create a streamlined POS System for PC Peripherals using C#.</i></p>
                     <li class="card-item"> BancLite: Banking Management System Application</li>
+                    <p><i>BancLite is an offline Banking Management System Simulation that models fundamental banking processes made in Java. </i></p>
                     <li class="card-item"> FilipiKnows: A Game Quiz in Philippine Knowledge</li>
+                    <p><i>FilipiKnows is a console-based game in C++ that tests users with their knowledge everything Filipino.</i></p>
                 </ul>
+            </section>
+            <section id="links" class="card" tabindex="0">
+                <h2>Course Assessments</h2>
+                <p>FA2: <a href="https://dlgaquilon.github.io/it103-fa2-greensense-landing-page/">GreenSense Landing Page</a></p>
             </section>
         </main>
     </div>
@@ -40,6 +48,10 @@
 </body>
 
 </html>
+
+
+
+
 
 
 
