--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <section id="links" class="card" tabindex="0">
                 <h2>Course Assessments</h2>
                 <p>FA2: <a href="https://dlgaquilon.github.io/it103-fa2-greensense-landing-page/">GreenSense Landing Page</a></p>
+                <p>FA3: <a href="https://dlgaquilon.github.io/IT103_FA3/">Machine Problems 1 and 3</a></p>
             </section>
         </main>
     </div>
