added fa4 to portfolio

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <h2>Course Assessments</h2>
                 <p>FA2: <a href="https://dlgaquilon.github.io/it103-fa2-greensense-landing-page/">GreenSense Landing Page</a></p>
                 <p>FA3: <a href="https://dlgaquilon.github.io/IT103_FA3/">Machine Problems 1 and 3</a></p>
+                <p>FA4: <a href="http://vercel.com/dlgaquilons-projects/it103-fa4/4qUrHQuf83riuY8V5JdKDJtwKkJR">Tailwind CSS Tutorial Blog</a></p>
             </section>
         </main>
     </div>
